2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageBrowser.cs, WelcomePageFallbackWidget.cs, WelcomePageView.cs:
	  Moved Freedesktop.RecentFiles classes to MonoDevelop.Core.Gui namespace.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageView.cs: Make sure the RecentProjectChanged event is handled in
	  the GUI thread.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.mdp: Updated project files. The order of extended properties
	  won't change anymore.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageView.cs: Moved PlatformService to MD.Core.Gui. Removed old
	  FileIconService class, which is now implemented in PlatformService.

2007-12-12  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageFallbackWidget.cs: Set hover status message for links. Re-use
	  delegates where possible.
	* WelcomePageView.cs, WelcomePageBrowser.cs: Move link status code into
	  common class for the two welcome implementations.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs,
	  gtk-gui/gui.stetic: Cosmetic fix.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePage.addin.xml: Bump add-in versions.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* WelcomePageFallbackWidget.cs, WelcomePage.mdp, gtk-gui/objects.xml,
	  gtk-gui/MonoDevelop.WelcomePage.WelcomePageFallbackWidget.cs,
	  gtk-gui/gui.stetic: Make fonts bigger. Show url descriptions in the
	  button instead of a tooltip. Moved project table headers into the table,
	  to make sure they are properly aligned.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* WelcomePageView.cs: Use the PlatformService to get Mime information instead
	  of Gnome.Vfs directly

2007-12-05  Michael Hutchinson <mhutchinson@novell.com> 

	* WelcomePageFallbackWidget.cs: Correct background rendering order.
	* WelcomePageView.cs: Disable the HTML welcome page code path; the GTK#