@@ -1,3 +1,8 @@
+2007-12-28  Paul Lange  <palango@gmx.de>
+
+	* WelcomePageContent.xml: Fix 'Bug 350395 - Use of "New Project/Solution" 
+	  terminology is inconsistent'.
+
 2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* WelcomePageBrowser.cs, WelcomePageFallbackWidget.cs, WelcomePageView.cs:
